--- a/css/styles.css
+++ b/css/styles.css
@@ -15,4 +15,13 @@
 #font {
   font-size: 32px;
   text-align: center;
+  margin-left: 30px;
+}
+.tri {
+  margin-left: 30px;
+  background-image: url(<img src="image/tr1.jpg">)
+}
+.upper {
+  font-variant-caps: all-petite-caps;
+  font-size: 24px;
 }
