--- a/css/styles.css
+++ b/css/styles.css
@@ -13,24 +13,31 @@
   border-radius: 1em;
 }
 #font {
-  font-size: 32px;
+  font-size: 52px;
   text-align: center;
   margin-left: 30px;
+  color: darkorange;
 }
 .tri {
-  margin-left: 30px;
-  background-image: url(<img src="image/tr1.jpg">)
+  margin-left: 60px;
+  background-image: url(file:///home/ken/Desktop/moringa-school-projects/ken/TRIANGLE-TRACKER/image/3dtri.jpg);
+  margin-left: -8px;
+  margin-top: -35px;
+  margin-right: -8px;
+  margin-bottom: -8px;
 }
 .upper {
   font-variant-caps: all-petite-caps;
-  font-size: 24px;
+  font-size: 28px;
+  color: darkred;
+
 }
 .tributton {
   float: right;
 }
 button {
-  height: 150px;
-  width: 550px;
+  height: 250px;
+  width: 650px;
   border-radius: 0.25em;
   color: darkorange;
   border-top: -500px;
